@@ -1,3 +1,9 @@
+2013-11-27 John Wu <John dot Wu at ACM dot org>
+	* src/query.h, src/query.cpp: add member function
+	query::addConditions
+	* src/whereClause.h, src/whereClause.cpp: add functions
+	whereClause::addExpr and whereClause::addConditions
+
 2013-11-18 John Wu <John dot Wu at ACM dot org>
 	* doc/quickstart.html: update the number of hits for query "a = b
 	and c < 10" to be 9 instead of 10 (an error spotted by Neils
